--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,12 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11 for x64
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        java-version: '11'
+        distribution: 'adopt'
+        architecture: x64
     - name: Build with Maven
-      run: mvn -B package sonar:sonar --file pom.xml
-      env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn -B package --file pom.xml
